<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".DetailedGroupFragment">

    <TextView
        android:id="@+id/tvGroupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/noGroupInfo"
        android:textSize="22sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/lvMembers"
        android:layout_width="match_parent"
        android:layout_height="350dp">

    </ListView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLeaveGroup"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/leave" />

        <Button
            android:id="@+id/btnJoinGroup"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="19dp"
            android:enabled="false"
            android:text="@string/join" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvNameTaken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nameTaken"
        android:textColor="@color/colorAccent"
        android:visibility="invisible" />

</LinearLayout>