<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="150dp"
    android:orientation="vertical"
    tools:context=".UserNameFragment">


    <EditText
        android:id="@+id/etUsernameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnAddUsername"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/signIn" />

    <TextView
        android:id="@+id/tvErrorUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emptyUsername"
        android:textColor="@color/colorAccent"
        android:visibility="invisible" />
</LinearLayout>